Updated folder structure and refactored code, april 03

--- a/about.html
+++ b/about.html
@@ -48,9 +48,9 @@
     </nav>
     <!-- Social Sidebar -->
     <div class="social-sidebar">
-        <a href="#" class="social-link instagram"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="social-link whatsapp"><i class="fab fa-whatsapp"></i></a>
-        <a href="#" class="social-link facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/blossommanjeri" target="_blank" class="social-link instagram"><i class="fab fa-instagram"></i></a>
+        <a href="https://wa.me/919895277499" target="_blank" class="social-link whatsapp"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://www.facebook.com/blossom.manjeri" target="" class="social-link facebook"><i class="fab fa-facebook-f"></i></a>
     </div>
 
     <!--about school contents-->
@@ -137,7 +137,7 @@
                 </div>
                 <div class="leadership-info">
                     <h3>Principal's Message</h3>
-                    <h4>Dr. SOUDHA</h4>
+                    <h4>Mrs SOUDA</h4>
                     <p class="designation">Principal</p>
                     <div class="message">
                         <p>"Education is not the filling of a pail, but the lighting of a fire. At Blossom Public School, we strive to ignite the spark of curiosity and learning in every child. Our approach combines academic excellence with character development, ensuring that students not only excel in their studies but also become responsible citizens who contribute positively to society."</p>
@@ -154,8 +154,8 @@
                     <img src="images/gallery/ummer.jpg" alt="Manager's Photo">
                 </div>
                 <div class="leadership-info">
-                    <h3>administrator's Message</h3>
-                    <h4>Mr. UMMER</h4>
+                    <h3>Administrator's Message</h3>
+                    <h4>Mr UMMER</h4>
                     <p class="designation">School Administrator</p>
                     <div class="message">
                         <p>"As we navigate the 21st century, education must evolve to meet new challenges while preserving timeless values. At Blossom Public School, we have created an institution that balances tradition with innovation, providing students with the skills they need for future success while instilling in them the values that will guide them through life."</p>
@@ -257,42 +257,42 @@
     </div>
 </section>
 
-<!-- Impact Section -->
-<section class="impact-section">
-    <div class="container">
-        <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">Our Legacy</h2>
-        <div class="stats-container">
-            
-            <!-- Students Graduated -->
-            <div class="stat-item" data-aos="fade-up" data-aos-delay="150">
-                <div class="stat-icon">
-                    <i class="fas fa-user-graduate"></i>
-                </div>
-                <div class="stat-number" data-count="5000">0+</div>
-                <div class="stat-label">Students Graduated</div>
-            </div>
+        <!-- Impact Section -->
+        <section class="impact-section">
+            <div class="container">
+                <h2 class="section-title" data-aos="fade-up" data-aos-delay="100">Our Legacy</h2>
+                <div class="stats-container">
+                    
+                    <!-- Students Graduated -->
+                    <div class="stat-item" data-aos="fade-up" data-aos-delay="150">
+                        <div class="stat-icon">
+                            <i class="fas fa-user-graduate"></i>
+                        </div>
+                        <div class="stat-number" data-count="2000">0+</div>
+                        <div class="stat-label">Students Graduated</div>
+                    </div>
 
-            <!-- Dedicated Staff -->
-            <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
-                <div class="stat-icon">
-                    <i class="fas fa-chalkboard-teacher"></i>
-                </div>
-                <div class="stat-number" data-count="35">0+</div>
-                <div class="stat-label">Dedicated Staff Members</div>
-            </div>
+                    <!-- Dedicated Staff -->
+                    <div class="stat-item" data-aos="fade-up" data-aos-delay="200">
+                        <div class="stat-icon">
+                            <i class="fas fa-chalkboard-teacher"></i>
+                        </div>
+                        <div class="stat-number" data-count="75">0+</div>
+                        <div class="stat-label">Dedicated Team Members</div>
+                    </div>
 
-            <!-- Years of Excellence -->
-            <div class="stat-item" data-aos="fade-up" data-aos-delay="250">
-                <div class="stat-icon">
-                    <i class="fas fa-school"></i>
-                </div>
-                <div class="stat-number" data-count="22">0+</div>
-                <div class="stat-label">Years of Excellence</div>
-            </div>
+                    <!-- Years of Excellence -->
+                    <div class="stat-item" data-aos="fade-up" data-aos-delay="250">
+                        <div class="stat-icon">
+                            <i class="fas fa-school"></i>
+                        </div>
+                        <div class="stat-number" data-count="22">0+</div>
+                        <div class="stat-label">Years of Excellence</div>
+                    </div>
 
-        </div>
-    </div>
-</section>
+                </div>
+            </div>
+        </section> 
 
 <!-- Core Values Section
 <section class="values-section">
@@ -343,11 +343,18 @@
             personalized attention, and enriching experiences beyond the classroom, fostering growth from early education to high school.
         </p>
         <div class="buttons">
-            <button class="btn enroll">Enroll With Us</button>
-            <button class="btn teach">Teach With Us</button>
-            <button class="btn alumni">Alumni & Beyond</button>
+            <a href="admission.html" target="_blank" class="btn enroll">
+                Enroll With Us
+            </a>
+            <a href="https://forms.gle/XtqKRjojZ7tq6JNV8" target="_blank" class="btn teach">
+                Teach With Us
+            </a>
+            <a href="https://forms.gle/oyMzCxyiDwzpxQVD7" target="_blank" class="btn alumni">
+                Alumni & Beyond
+            </a>
         </div>
-    </div>
+    </div>   
+
     <!--JOIN OUR COMMUNITY END-->
     <!-- Footer -->
     <footer class="footer" data-aos="fade-up">
@@ -363,13 +370,12 @@
                 <div class="footer-col" data-aos="fade-up" data-aos-delay="200">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Home</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> About Us</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Admission</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Faculty</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Achievements</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Gallery</a></li>
-                        <li><a href="#"><i class="fas fa-chevron-right"></i> Contact Us</a></li>
+                        <li><a href="index.html"><i class="fas fa-chevron-right"></i> Home</a></li>
+                        <li><a href="about.html"><i class="fas fa-chevron-right"></i> About Us</a></li>
+                        <li><a href="admission.html"><i class="fas fa-chevron-right"></i> Admission</a></li>
+                        <li><a href="faculties.html"><i class="fas fa-chevron-right"></i> Faculty</a></li>
+                        <li><a href="gallery.html"><i class="fas fa-chevron-right"></i> Gallery</a></li>
+                        <li><a href="contact.html"><i class="fas fa-chevron-right"></i> Contact Us</a></li>
                     </ul>
                 </div>
                 <!-- Contact Us -->
@@ -382,15 +388,15 @@
                         </li>
                         <li>
                             <i class="fas fa-phone"></i>
-                            <span>+91 9876543210</span>
+                            <span><a href="tel:+919895277499">+91 9895277499</a></span>
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
-                            <span>info@blossomschool.edu.in</span>
+                            <span><a href="mailto:blossomschoolmji@gmail.com">blossomschoolmji@gmail.com</a></span>
                         </li>
                         <li>
                             <i class="fas fa-clock"></i>
-                            <span>Mon - Sat: 8:00 AM - 4:00 PM</span>
+                            <span>Mon - Sat: 9:00 AM - 4:00 PM</span>
                         </li>
                     </ul>
                 </div>
@@ -401,13 +407,28 @@
                     <a href="https://wa.me/919895277499" target="_blank" class="whatsapp-button">
                         <i class="fab fa-whatsapp"></i> Chat Now
                     </a>
+                    <!-- <div class="footer-social-links" style="margin-top: 20px;">
+                        <a href="https://www.facebook.com/blossomschoolmanjeri" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/blossommanjeri" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                        <a href="https://twitter.com/blossomschoolmanjeri" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/blossomschoolmanjeri" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+                    </div> -->
                 </div>
             </div>
-            <div class="footer-bottom">
+            <!-- <div class="footer-bottom">
                 <p>&copy; 2025 Blossom Public School, Manjeri. All Rights Reserved.</p>
-            </div>
+                <div class="footer-links">
+                    <a href="privacy-policy.html">Privacy Policy</a>
+                    <span>|</span>
+                    <a href="terms.html">Terms of Service</a>
+                    <span>|</span>
+                    <a href="sitemap.html">Sitemap</a>
+                </div>
+            </div> -->
         </div>
     </footer>
+
+
 <script src="assets/js/script.js"></script>
 <!-------AOS JS ------------>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
